some more minor changes

--- a/_config.yml
+++ b/_config.yml
@@ -26,20 +26,20 @@ description: >- # used by seo meta and the atom feed
 url: "https://surya-dev-singh.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: surya-dev-singh # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: kryolite_secure # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Surya Dev Singh
-  email: example@domain.com # change to your email address
+  email: suryadevsingh521@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/kryolite_secure # change to your twitter homepage
+    - https://github.com/surya-dev-singh # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
